examples/test/testpolicy6031.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6031
  namespace: namespace470
spec:
  podSelector:
    matchLabels:
      key5: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value47
          key13: value13
          key39: value34
      podSelector:
        matchLabels:
          key4: value30
